[package]
name = "send2kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
config =  { version = "0.13.4", features = ["yaml"] }
env_logger = "0.10.1"
derive_more = "0.99.17"
log = "0.4.20"
serde = "1.0.193"

[target.'cfg(unix)'.dependencies]
rdkafka = { version = "0.36", features = ["cmake-build", "ssl"] }

[target.'cfg(windows)'.dependencies]
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "gssapi"] }