[package]
name = "send2kafka"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
config =  { version = "0.13.4", features = ["yaml"] }
env_logger = "0.10.1"
derive_more = "0.99.17"
log = "0.4.20"
serde = "1.0.193"

[target.'cfg(unix)'.dependencies]
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "gssapi"] }

[target.'cfg(windows)'.dependencies]
rdkafka = { version = "0.36", features = ["cmake-build", "ssl"] }

[patch.crates-io]
rdkafka = { git = "https://github.com/ignytis/rust-rdkafka.git", branch = "poll_error_callbacks" }